added endpoint for retrieving countries by id in http server
