# src/core/handlers/location/query-builder.ts
@@ -3,6 +3,7 @@ import { ILocationHandlersGetAllCountriesParams } from '../../interfaces';
 
 export interface ILocationQueryBuilder {
   getAllCountries(params: ILocationHandlersGetAllCountriesParams): string;
+  getOneCountry(id: string): string;
   getOneCity(id: string): string;
 }
 
@@ -16,6 +17,23 @@ export class LocationPostgresQueryBuilder implements ILocationQueryBuilder {
     }
 
     return `SELECT * FROM countries LIMIT ${params.limit} OFFSET ${params.skip};`;
+  }
+
+  public getOneCountry(id: string): string {
+    return `
+    SELECT
+      co.id AS country_id,
+      co.name AS country_name,
+      co.alpha_two_code AS country_alpha_two_code,
+      co.alpha_three_code AS country_alpha_three_code
+    FROM countries as co
+    WHERE co.id='${id}';
+    SELECT
+      id AS state_id,
+      name AS state_name
+    FROM states
+    WHERE country_id='${id}';
+    `;
   }
 
   public getOneCity(id: string): string {
