# src/servers/http/api/controllers/location.ts
@@ -4,7 +4,7 @@ import { Request, Response } from 'express';
 import status from 'http-status';
 import { TYPES } from '../../ioc/types';
 import { ILocationHandlers } from '../../../../core/handlers';
-import { locationGetAllSchema, locationGetOneCitySchema } from '../../../schemas';
+import { locationGetAllSchema, locationGetOneCitySchema, locationGetOneCountrySchema } from '../../../schemas';
 import { ILocationMapper } from '../mappers';
 import { API } from '../models/schema';
 
@@ -24,6 +24,15 @@ export class LocationController implements interfaces.Controller {
       countryName,
     });
     const response: API.GetAllCountriesResponse = this.locationMapper.responseGetAll(result);
+
+    res.status(status.OK).json(response);
+  }
+
+  @httpGet('/country/:id')
+  public async getOneCountry(@request() req: Request, @response() res: Response): Promise<void> {
+    const { id } = await locationGetOneCountrySchema.validate(req.params);
+    const result = await this.locationHandler.getOneCountry(id);
+    const response: API.GetOneCountryResponse = this.locationMapper.responseGetOneCountry(result);
 
     res.status(status.OK).json(response);
   }
